# adversarial

./: .gitignore  README.md  experiments_reported.md  main.tex  project_tree.md  pyproject.toml
configs/poisoning/: backdoor_cnn_p005.json  backdoor_cnn_p010.json  backdoor_resnet_p005.json  backdoor_resnet_p010.json  cnn_p005.json  cnn_p010.json  resnet_p005.json  resnet_p010.json
configs/vision/: vision_resnet.json  visualize_vision_resnet.json
results/used/20251008_090059/: metadata.json  metrics.csv
results/used/20251010_182624/: metadata.json  metrics.csv
results/used/20251010_202919/: metadata.json  metrics.csv
results/used/20251011_161720/: metadata.json  metrics.csv
results/used/20251011_170118/: metadata.json  metrics.csv
results/used/20251015_232849/: metadata.json  metrics.csv
results/used/20251016_001054/: metadata.json  metrics.csv
results/used/20251016_013035/: metadata.json  metrics.csv
results/used/20251016_032347/: metadata.json  metrics.csv
scripts/: analyze_llm.py  run_experiment.sh  run_llm.py  run_poisoning.py  run_vision.py  setup_env.sh  test_single_file.py  validate_config.py  visualize_vision.py
src/aml_lab/common/: __init__.py  io.py  metrics.py  seed.py
src/aml_lab/llm/: __init__.py  agent.py  dataset.py  (+1 more)
temp_configs/: backdoor_resnet18_p005_e50_20251011_170118.json  backdoor_resnet18_p010_e50_20251011_161720.json  poison_cnn_p005_e50_20251010_182624.json  poison_cnn_p010_e50_20251011_012239.json  poison_resnet18_p005_e15_20251010_223209.json  poison_resnet18_p010_e15_20251010_224403.json  vision_20251008_090059.json
(+7 files in other folders)
